@@ -3,6 +3,8 @@ update-manager (1:0.93.27) intrepid; urgency=low
   * DistUpgrade/xorg_fix_intrepid.py:
     - only update the InputDevices if xserver-xorg-core
       actually is version 2:1.5.0 or higher
+    - make section checks case-insensitive (thanks to
+      Alberto Milone)
   * DistUpgrade/DistUpgrade.glade:
     - remove has_focus default in the conffiel dialog
 
